chore: moved email folders around
