# cmd/api/main.go
@@ -11,7 +11,7 @@ import (
 	"runtime"
 	"syscall"
 
-	_ "github.com/nneji123/ecommerce-golang/docs" // docs is generated by Swag CLI, you have to import it.
+	_ "github.com/nneji123/ecommerce-golang/docs"
 
 	"github.com/MadAppGang/httplog/echolog"
 	"github.com/SporkHubr/echo-http-cache"
@@ -19,26 +19,23 @@ import (
 	"github.com/hibiken/asynq"
 	"github.com/labstack/echo/v4"
 	"github.com/labstack/echo/v4/middleware"
-	"github.com/nneji123/ecommerce-golang/auth"
-	"github.com/nneji123/ecommerce-golang/config"
-	"github.com/nneji123/ecommerce-golang/db"
-	emailHandlers "github.com/nneji123/ecommerce-golang/internal/email"
-	leadHandlers "github.com/nneji123/ecommerce-golang/internal/leads"
-	"github.com/nneji123/ecommerce-golang/internal/middlewares"
+	"github.com/nneji123/ecommerce-golang/internal/config"
+	"github.com/nneji123/ecommerce-golang/internal/db"
+	"github.com/nneji123/ecommerce-golang/internal/middleware"
 	"log"
 	"net/http"
 	"os"
 	"time"
 )
 
-//	@title			LeadzAura API
+//	@title			Ecommerce API
 //	@version		1.0
 //	@description	Leadz Aura API is a service for leads generation and outreach..
 //	@termsOfService	http://swagger.io/terms/
 
-//	@contact.name	LeadzAura Support
-//	@contact.url	http://leadzaura.com
-//	@contact.email	contact@leadzaura.com
+//	@contact.name	Ecommerce Support
+//	@contact.url	http://Ecommerce.com
+//	@contact.email	contact@Ecommerce.com
 
 //	@license.name	MIT
 //	@license.url	http://www.apache.org/licenses/LICENSE-2.0.html
@@ -85,7 +82,6 @@ func main() {
 	e.Use(middleware.Recover())
 	e.Use(cacheClient.Middleware())
 	// e.Use(middleware.AddTrailingSlash())
-	e.Use(auth.AuthorizeMiddleware(getOpenRoutes()))
 	e.Use(middlewares.CorsWithConfig(cfg))
 	e.Use(middlewares.RateLimiterMiddleware(getRateLimitedRoutes()))
 
@@ -96,10 +92,6 @@ func main() {
 	// Create a new asynq client for enqueuing tasks.
 	client := asynq.NewClient(asynq.RedisClientOpt{Addr: cfg.RedisAddr})
 	defer client.Close()
-
-	// Leads routes
-	leadHandlers.RegisterLeadHandlers(e)
-	emailHandlers.RegisterEmailHandlers(e, client)
 
 	// Print server details
 	printServerDetails(cfg)
